[tool.poetry]
name = "linkpulse"
version = "0.1.0"
description = ""
authors = ["Xevion <xevion@xevion.dev>"]
license = "GNU GPL v3"
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
app = "linkpulse"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.100"
Hypercorn = "0.14.4"
python-dotenv = "^1.0.1"
peewee = "^3.17.7"
peewee-migrate = "^1.13.0"
types-peewee = "^3.17.7.20241017"
types-psycopg2 = "^2.9.21.20241019"
fastapi-cache2 = "^0.2.2"
questionary = "^2.0.1"
apscheduler = "^3.10.4"
human-readable = "^1.3.4"


[tool.poetry.group.dev.dependencies]
memory-profiler = "^0.61.0"
bpython = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
